<resources>
    <string name="app_name">messenger-klopoff</string>
    <string name="start_messaging">Start Messaging</string>
    <string name="sign_in_title">Welcome back</string>
    <string name="login">Login</string>
    <string name="sign_up_hint">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_sub_title">Sign to continue</string>
    <string name="sign_up_title">Hello there</string>
    <string name="sign_up_sub_title">Create an account and start messaging</string>
    <string name="register">Register</string>
    <string name="sign_in_hint">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password_confirm_hint">Password again</string>
    <string name="invalid_email_error">You have entered invalid email address</string>
    <string name="invalid_password_error">You have entered invalid password</string>
    <string name="invalid_credentials_error">Invalid credentials, try again</string>
    <string name="invalid_password_confirm_error">Passwords are not equals</string>
    <string name="something_went_wrong_error">Something went wrong, try again later please</string>
    <string name="settings">Settings</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="user_avatar">User avatar</string>
    <string name="no_messages">No messages</string>
    <string name="message">Message</string>
    <string name="send_message">Send message</string>
    <string name="chats_fab">fab_contact</string>
    <string name="search">Search</string>
    <string name="nothing_found">Nothing found</string>
    <string name="username_hint">Username</string>
    <string name="invalid_username_error">You have entered invalid username</string>
</resources>