<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/glTop" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_sub_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:hint="@string/email_hint"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        app:layout_constraintBottom_toTopOf="@id/tfPassword"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password_hint"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tfEmail"
        app:layout_constraintBottom_toTopOf="@id/tfPasswordConfirm"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password_confirm_hint"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tfPassword"
        app:layout_constraintBottom_toTopOf="@id/tvError"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tfPasswordConfirm"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        tools:text="Error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/llSignIn"
        app:layout_constraintEnd_toStartOf="@id/glRight"
        app:layout_constraintStart_toStartOf="@id/glLeft" />

    <LinearLayout
        android:id="@+id/llSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/glBot"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintStart_toStartOf="@id/glLeft">

        <TextView
            android:id="@+id/tvSignUpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_hint" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>